--- a/FutInfo/Base.lproj/Main.storyboard
+++ b/FutInfo/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--FutInfo-->
         <scene sceneID="ZNk-8l-zH2">
             <objects>
                 <tableViewController id="sbv-yQ-TmX" sceneMemberID="viewController">
@@ -31,7 +31,7 @@
                             <outlet property="delegate" destination="sbv-yQ-TmX" id="jqs-iC-MkL"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="oFW-7o-r6e"/>
+                    <navigationItem key="navigationItem" title="FutInfo" id="oFW-7o-r6e"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HO4-Ig-irb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -42,8 +42,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DHF-9N-FEC" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GML-fb-W1q">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="GML-fb-W1q">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
