--- a/FutInfo/Base.lproj/Main.storyboard
+++ b/FutInfo/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DHF-9N-FEC">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -13,16 +13,38 @@
             <objects>
                 <tableViewController id="sbv-yQ-TmX" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="nCA-NU-ROD">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4zG-zg-wUL">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="leagueCell" rowHeight="100" id="4zG-zg-wUL">
+                                <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4zG-zg-wUL" id="LaT-1U-4NK">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="la-liga-santander" translatesAutoresizingMaskIntoConstraints="NO" id="zbT-gw-YCJ">
+                                            <rect key="frame" x="20" y="2.6666666666666643" width="109" height="95"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="95" id="hqr-9K-O6z"/>
+                                                <constraint firstAttribute="width" constant="109" id="uIn-kf-cwC"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="La Liga Santander" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnZ-px-zOq">
+                                            <rect key="frame" x="141" y="39.666666666666664" width="229" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="fnZ-px-zOq" firstAttribute="leading" secondItem="zbT-gw-YCJ" secondAttribute="trailing" constant="12" id="7ls-uf-0fy"/>
+                                        <constraint firstItem="zbT-gw-YCJ" firstAttribute="leading" secondItem="LaT-1U-4NK" secondAttribute="leading" constant="20" symbolic="YES" id="BBx-OF-ick"/>
+                                        <constraint firstItem="zbT-gw-YCJ" firstAttribute="centerY" secondItem="LaT-1U-4NK" secondAttribute="centerY" id="CKt-df-vYf"/>
+                                        <constraint firstItem="fnZ-px-zOq" firstAttribute="trailing" secondItem="LaT-1U-4NK" secondAttribute="trailingMargin" id="XZR-MI-r4Z"/>
+                                        <constraint firstItem="fnZ-px-zOq" firstAttribute="centerY" secondItem="LaT-1U-4NK" secondAttribute="centerY" id="reK-h8-XBA"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -35,7 +57,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HO4-Ig-irb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-28.985507246376812" y="162.05357142857142"/>
+            <point key="canvasLocation" x="-29.23076923076923" y="161.37440758293837"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="e68-Vc-HoU">
@@ -43,7 +65,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DHF-9N-FEC" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="GML-fb-W1q">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="44" width="390" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -57,6 +79,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="la-liga-santander" width="300" height="95"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
