--- a/FutInfo/Base.lproj/Main.storyboard
+++ b/FutInfo/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--FutInfo-->
         <scene sceneID="ZNk-8l-zH2">
             <objects>
-                <tableViewController id="sbv-yQ-TmX" sceneMemberID="viewController">
+                <tableViewController id="sbv-yQ-TmX" customClass="LeagueTableViewController" customModule="FutInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="nCA-NU-ROD">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
