--- a/FutInfo/Base.lproj/Main.storyboard
+++ b/FutInfo/Base.lproj/Main.storyboard
@@ -25,21 +25,21 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zbT-gw-YCJ">
-                                            <rect key="frame" x="20" y="2.6666666666666643" width="109" height="95"/>
+                                            <rect key="frame" x="20" y="10" width="100" height="80"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="95" id="hqr-9K-O6z"/>
-                                                <constraint firstAttribute="width" constant="109" id="uIn-kf-cwC"/>
+                                                <constraint firstAttribute="height" constant="80" id="hqr-9K-O6z"/>
+                                                <constraint firstAttribute="width" constant="100" id="uIn-kf-cwC"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="League Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnZ-px-zOq">
-                                            <rect key="frame" x="141" y="40" width="229" height="20.333333333333329"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="136" y="40" width="234" height="20.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="fnZ-px-zOq" firstAttribute="leading" secondItem="zbT-gw-YCJ" secondAttribute="trailing" constant="12" id="7ls-uf-0fy"/>
+                                        <constraint firstItem="fnZ-px-zOq" firstAttribute="leading" secondItem="zbT-gw-YCJ" secondAttribute="trailing" constant="16" id="7ls-uf-0fy"/>
                                         <constraint firstItem="zbT-gw-YCJ" firstAttribute="leading" secondItem="LaT-1U-4NK" secondAttribute="leading" constant="20" symbolic="YES" id="BBx-OF-ick"/>
                                         <constraint firstItem="zbT-gw-YCJ" firstAttribute="centerY" secondItem="LaT-1U-4NK" secondAttribute="centerY" id="CKt-df-vYf"/>
                                         <constraint firstItem="fnZ-px-zOq" firstAttribute="trailing" secondItem="LaT-1U-4NK" secondAttribute="trailingMargin" id="XZR-MI-r4Z"/>
